0.8.12
==============================================
OSP-Core: Fixes an issue where /Channels page gives a 500 error if Show Empty Tables is set to False
OSP-Core: Fixes an issue where the dbFixes() function does not update the System Settings due to caching

0.8.11
==============================================
OSP-Core: Fixed Topic URL link link to point to /topic/ not /topics on DarkCow Live Page #421 - 348f96cd94e1044dd1ded262b5aab5649c09b503
OSP-Core: Fixed an issue where System Settings Cached DB Calls were not invalidating properly #422 -2417a7485391879dd6d20273eab43b64b631be11
OSP-Installer: Fixed an issue where osp-config.sh was not performing the correct update procedure due to duplicate entries #419 - 7ed83d77547f83cab2baf2e3b79a891828bfcd68

0.8.10
==============================================
OSP-Core: Added /apiv1/server/ping endpoint for up/down checks - 1678bc6d4b35d087e3f1a06d046afc706d62b449
OSP-Core: Added ejabberdServerHttpBindFQDN config.py variable to handle issues with Docker - b25d6166e42ff32af631ea6f1e04cb659e2efda9
OSP-Core: Fixes an issue where the the Channel Creation API would return Unsupported Operand #415 - 2ac68c849ba49ed6c0f05138736b8740e2fafe6f
OSP-Core: Fixes an issue in User Creation API which would return an error #418 - 52b83f0c7f68dc28cbf3d9279063e40e9f1b7b73
OSP-Core: Fixes User Deletion to Remove all Channels, Videos, owned by deleted user
OSP-Core: Adds /migrations to Git Ignore - 71e80a0bd7ed70e957d9ed59324717c15fdb46ac
OSP-Core: Optimized a handful of database queries for reducing latency
OSP-Core: Added Flask-Caching to use Redis to Cache Database Queries - Idea provided by @markboggs via MR !283
OSP-Core: Changed channels.html and vidplayer.html to work with optimized queries **Note:** Custom Themes will need to be changed to use template filters as in these files as some DB Object subqueries will no longer work and will cause errors


0.8.9
==============================================